src/main/java/com/example/project_management_tool/presentation/shared/error/CustomResponseException.java
package com.example.project_management_tool.presentation.shared.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class CustomResponseException extends RuntimeException {

    private int code;
    private String message;

    public static CustomResponseException ResourceNotFound(String message) {
        return new CustomResponseException(404, message);
    }

}
